--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "unistd.h": "c",
         "compare": "c",
         "type_traits": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "stdlib.h": "c",
+        "argp.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
