--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "type_traits": "c",
         "string.h": "c",
         "stdlib.h": "c",
-        "argp.h": "c"
+        "argp.h": "c",
+        "wait.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
